Fix search message overflow

--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -147,6 +147,7 @@
 }
 
 .search-empty {
+	width: 100%;
 	max-width: rem(1024px);
 	margin: rem(16px) auto 0;
 	grid-row: 3;
